contains real messages. These messages will be left alone.

Minor Features
--------------
* Don't traceback when an IMAP server returns a all-digit folder name
  without quotes. Thanks to Rhett Garber for the bug report. (#107)
* More tests for ACL related methods (#89)
* More tests for namespace()

Minor Bug Fixes
---------------
* Fixed rename live test so that it uses folder namespaces (#100).

=======
 0.8.1
=======

* IMAPClient wasn't installing on Windows due to an extra trailing
  slash in MANIFEST.in (#102). This is a bug in distutils.
* MANIFEST.in was fixed so that the main documentation index file
  is included the source distribution.
* distribute_setup.py was updated to the 0.6.24 version.
* This release also contains some small documentation fixes.

=====
 0.8
=====

OAUTH Support (#54) [NEW]
-------------------------
OAUTH authentication is now supported using the oauth_login
method. This requires the 3rd party oauth2 package is
installed. Thanks to Johannes Heckel for contributing the patch to
this.

IDLE Support (#50) [NEW]
------------------------
The IDLE extension is now supported through the new idle(),
idle_check() and idle_done() methods. See the example in
imapclient/examples/idle_example.py.

NOOP Support (#74) [NEW]
------------------------
The NOOP command is now supported. It returns parsed untagged server
responses in the same format as idle_check() and idle_done().

Sphinx Based Docs (#5) [NEW]
----------------------------
Full documentation is now available under doc/html in the source
distribution and at http://imapclient.readthedocs.org/ online.

Added rename_folder (#77) [NEW] 
--------------------------------
Renaming of folders was an obvious omission!

Minor Features
--------------
* interact.py can now read livetest.py INI files (#66)
* interact.py can now embed shells from ipython 0.10 and 0.11 (#98)
* interact.py and livetest.py are now inside the imapclient package so